manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lunix07-app-test-flask-deployed-deployment
  labels:
    app: lunix07-app-test-flask-deployed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lunix07-app-test-flask-deployed
  template:
    metadata:
      labels:
        app: lunix07-app-test-flask-deployed
    spec:
      containers:
        - name: lunix07-app-test-flask-deployed-container
          image: lunix007/lunix07-app-test-flask-deployed:b43e6f7b9e4066bb7eebcdda920ef24b52526207
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
