manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lunix07-app-test-flask-deployed-service
  labels:
    app: lunix07-app-test-flask-deployed
spec:
  selector:
    app: lunix07-app-test-flask-deployed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
